--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,14 @@ tasks.withType(JavaCompile) {
 
 dependencies {
   compileOnly('javax.servlet:javax.servlet-api:4.0.1')
+  implementation group: 'org.springframework', name: 'spring-webmvc', version: '5.3.20'
+//  compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.24'
+  implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.28'
+  implementation group: 'org.thymeleaf', name: 'thymeleaf-spring5', version: '3.0.15.RELEASE'
+  implementation group: 'commons-fileupload', name: 'commons-fileupload', version: '1.5'
+  implementation group: 'nz.net.ultraq.thymeleaf', name: 'thymeleaf-layout-dialect', version: '2.5.3'
+//  implementation group: 'org.hibernate', name: 'hibernate-validator', version: '8.0.0.Final'
+  implementation group: 'org.hibernate', name: 'hibernate-validator', version: '6.1.0.Final'
 
   testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
   testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
